--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,17 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "illuminate/support": "^8.0",
-    "illuminate/config": "^8.0",
-    "illuminate/view": "^8.0",
-    "laravelcollective/html": "6.2.*"
+    "php": "^8.0",
+    "illuminate/support": "^9.44",
+    "illuminate/config": "^9.44",
+    "illuminate/view": "^9.44",
+    "laravelcollective/html": "^6.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "mockery/mockery": "~1.0",
-    "orchestra/testbench": "^6.2",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "phpunit/phpunit": "~9.5",
+    "mockery/mockery": "~1.5",
+    "orchestra/testbench": "~7.16",
+    "friendsofphp/php-cs-fixer": "^3.13"
   },
   "autoload": {
     "psr-4": {
