--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,17 @@
     }
   ],
   "require": {
-    "php": ">=8.1",
-    "illuminate/support": "^10.0",
-    "illuminate/config": "^10.0",
-    "illuminate/view": "^10.0",
-    "laravelcollective/html": "^6.2"
+    "php": ">=8.2",
+    "illuminate/support": "^12.0",
+    "illuminate/config": "^12.0",
+    "illuminate/view": "^12.0",
+    "spatie/laravel-html": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~9.5",
-    "mockery/mockery": "~1.5",
-    "orchestra/testbench": "~7.16",
-    "friendsofphp/php-cs-fixer": "^3.13"
+    "phpunit/phpunit": "^11.0",
+    "mockery/mockery": "^1.6",
+    "orchestra/testbench": "^10.0",
+    "friendsofphp/php-cs-fixer": "^3.20"
   },
   "autoload": {
     "psr-4": {
